--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   crypto_font_icons: 1.0.0+1
  # ably_flutter: ^1.2.0-preview.1
- # syncfusion_flutter_charts: ^19.1.63
+  syncfusion_flutter_charts: ^19.1.63
   fl_chart: ^0.36.1
   #intl: any
   twitter_api: ^0.1.2
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^0.20.1
   loading_overlay: ^0.3.0
   cloud_firestore: any
+  provider: ^5.0.0
  # image_sequence_animator: ^2.0.0
 dependency_overrides:
   intl: ^0.17.0-nullsafety.2
